tests/rosetta/transpiler/FS/ftp.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/ftp.fs(67,28): error FS0010: Unexpected symbol '>' in binding. Expected '=' or other token.

/workspace/mochi/tests/rosetta/transpiler/FS/ftp.fs(70,32): error FS0010: Unexpected symbol '>' in binding. Expected '=' or other token.
